--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -16,6 +16,7 @@ jobs:
         run: supabase link --project-ref $SUPABASE_PROJECT_ID
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+          SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
 
       - name: Apply migrations
         run: supabase db push --no-interactive
