fix: use boolean for deno nodeModulesDir

--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "check": "deno check supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
     "serve": "supabase functions serve"
   },
-  "nodeModulesDir": "auto",
+  "nodeModulesDir": true,
   "compilerOptions": {
     "types": ["./types/tesseract.d.ts"]
   }
