feat(bot): wire mini app url via env

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ OPENAI_ENABLED=
 FAQ_ENABLED=
 WINDOW_SECONDS=
 AMOUNT_TOLERANCE=
+MINI_APP_URL= # e.g. https://mini.dynamic.capital or https://dynamic-capital-mini.vercel.app
