feat(bot): gate mini app button via env

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,5 @@ OPENAI_ENABLED=
 FAQ_ENABLED=
 WINDOW_SECONDS=
 AMOUNT_TOLERANCE=
-MINI_APP_URL= # e.g. https://mini.dynamic.capital or https://dynamic-capital-mini.vercel.app
+# e.g. https://mini.dynamic.capital or https://dynamic-capital-mini.vercel.app
+MINI_APP_URL=
