chore: vendor tesseract import

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,9 @@ supabase/functions/**/vendor/
 supabase/functions/**/.edge/
 **/*.cas
 
+# keep telegram-bot vendor in git
+!supabase/functions/telegram-bot/vendor/
+!supabase/functions/telegram-bot/vendor/**
+
 # Mini app build & deps
 apps/mini/dist/
