--- a/deno.json
+++ b/deno.json
@@ -6,5 +6,6 @@
   "nodeModulesDir": true,
   "compilerOptions": {
     "types": ["./types/tesseract.d.ts"]
-  }
+  },
+  "importMap": "./supabase/functions/telegram-bot/vendor/import_map.json"
 }
