Fetch secrets from Supabase when env vars missing

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ WINDOW_SECONDS=
 AMOUNT_TOLERANCE=
 # e.g. https://mini.dynamic.capital or https://dynamic-capital-mini.vercel.app
 MINI_APP_URL=
+MINI_APP_SHORT_NAME=
+REQUIRE_PAY_CODE=
+BOT_VERSION=
