--- a/deno.json
+++ b/deno.json
@@ -2,11 +2,13 @@
   "tasks": {
     "check": "deno check supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
     "serve": "supabase functions serve",
-    "fmt": "deno fmt --check supabase/functions src",
-    "fmt:write": "deno fmt supabase/functions src",
-    "lint": "deno lint",
+    "fmt": "bash -lc '$(bash scripts/deno_bin.sh) fmt --check .'",
+    "fmt:write": "bash -lc '$(bash scripts/deno_bin.sh) fmt .'",
+    "lint": "bash -lc '$(bash scripts/deno_bin.sh) lint'",
+    "lint:fix": "bash scripts/fix_all.sh",
     "typecheck": "bash scripts/typecheck.sh",
-    "ci": "bash scripts/ci.sh"
+    "ci": "bash scripts/ci.sh",
+    "fix:repo": "bash scripts/fix_and_check.sh"
   },
   "nodeModulesDir": true,
   "compilerOptions": {
