--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -31,8 +31,8 @@ jobs:
           deno-version: v1.x
 
       # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
+      - name: Verify formatting
+        run: deno fmt check supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts
 
       - name: Type check
         run: deno check supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts
