chore: scrub service-role key from non-edge code

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,6 +3,7 @@
     "check:webhook": "deno run -A scripts/check-webhook.ts",
     "ping:webhook": "deno run -A scripts/ping-webhook.ts",
     "set:webhook": "deno run -A scripts/set-webhook.ts",
-    "test:start": "deno test -A functions/_tests/start-command.test.ts"
+    "test:start": "deno test -A functions/_tests/start-command.test.ts",
+    "guard:service-role": "deno run -A --no-npm scripts/guard-service-role.ts"
   }
 }
