feat(miniapp): call Supabase Edge, build+deploy function, wire bot to MINI_APP_URL

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -15,6 +15,10 @@
     "serve:linkage-audit": "supabase functions serve --no-verify-jwt linkage-audit",
     "miniapp-react:dev": "bash scripts/miniapp-react-dev.sh",
     "miniapp-react:build": "bash scripts/miniapp-react-build.sh",
-    "guard:env": "deno run -A scripts/guard-env-usage.ts"
+    "guard:env": "deno run -A scripts/guard-env-usage.ts",
+    "miniapp:build": "bash scripts/miniapp-build-to-edge.sh",
+    "miniapp:deploy": "deno task miniapp:build && npx supabase functions deploy miniapp",
+    "miniapp:check": "deno run -A scripts/miniapp-domain-check.ts",
+    "edge:call": "deno run -A scripts/call-edge.ts"
   }
 }
