test: Phase 7 — unit tests + integration smoke + CI gates (deno + actions)

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "test": "deno test -A supabase/functions/_tests",
     "check:webhook": "deno run -A scripts/check-webhook.ts",
     "ping:webhook": "deno run -A scripts/ping-webhook.ts",
     "set:webhook": "deno run -A scripts/set-webhook.ts",
