docs: document TELEGRAM_ADMIN_IDS env variable

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SUPABASE_ACCESS_TOKEN=
 SUPABASE_DB_PASSWORD=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_WEBHOOK_SECRET=
+TELEGRAM_ADMIN_IDS=
 BENEFICIARY_TABLE=
 OPENAI_API_KEY=
 OPENAI_ENABLED=
