docs: clarify admin ID env variable and 401 troubleshooting

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ SUPABASE_ACCESS_TOKEN=
 SUPABASE_DB_PASSWORD=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_WEBHOOK_SECRET=
+# Comma-separated Telegram user IDs for admin-only endpoints
+TELEGRAM_ADMIN_IDS=225513686,8411280111
 BENEFICIARY_TABLE=
 OPENAI_API_KEY=
 OPENAI_ENABLED=
