chore: document required secrets and add setup script

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
+## Core runtime secrets required by edge functions
 SUPABASE_URL=
-SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_SECRET=
+MINI_APP_URL=
+
+## Additional Supabase credentials
+SUPABASE_ANON_KEY=
 SUPABASE_PROJECT_ID=
 SUPABASE_ACCESS_TOKEN=
 SUPABASE_DB_PASSWORD=
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_WEBHOOK_SECRET=
+
 # Comma-separated Telegram user IDs for admin-only endpoints
 TELEGRAM_ADMIN_IDS=225513686,8411280111
+
+# Optional tuning knobs / feature flags
 BENEFICIARY_TABLE=
 OPENAI_API_KEY=
 OPENAI_ENABLED=
 FAQ_ENABLED=
 WINDOW_SECONDS=
 AMOUNT_TOLERANCE=
-# e.g. https://qeejuomcapbdlhnjqjcc.functions.supabase.co/miniapp/
-MINI_APP_URL=
