refactor: remove obsolete miniapp-react and update edge miniapp

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -14,11 +14,8 @@
     "audit:edge-hosts": "deno run -A scripts/audit-edge-hosts.ts",
     "linkage:check": "deno run -A scripts/check-linkage.ts",
     "serve:linkage-audit": "supabase functions serve --no-verify-jwt linkage-audit",
-    "miniapp-react:dev": "bash scripts/miniapp-react-dev.sh",
-    "miniapp-react:build": "bash scripts/miniapp-react-build.sh",
     "guard:env": "deno run -A scripts/guard-env-usage.ts",
-    "miniapp:build": "bash scripts/miniapp-build-to-edge.sh",
-    "miniapp:deploy": "deno task -c deno.jsonc miniapp:build && npx supabase functions deploy miniapp",
+    "miniapp:deploy": "npx supabase functions deploy miniapp",
     "miniapp:check": "deno run -A scripts/miniapp-domain-check.ts",
     "edge:call": "deno run -A scripts/call-edge.ts",
     "edge:deploy:verify": "npx supabase functions deploy verify-initdata",
