feat: load supabase env from config

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ OPENAI_ENABLED=
 FAQ_ENABLED=
 WINDOW_SECONDS=
 AMOUNT_TOLERANCE=
+
+## Frontend environment variables
+VITE_SUPABASE_URL=
+VITE_SUPABASE_KEY=
