--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,7 @@
     "miniapp:build": "deno run -A scripts/build-miniapp.ts",
     "miniapp:dev": "cd supabase/functions/miniapp && npm run dev",
     "miniapp:check": "deno run -A scripts/miniapp-health-check.ts",
-    "miniapp:deploy": "deno task miniapp:build && npx supabase functions deploy miniapp"
+    "miniapp:deploy": "deno task miniapp:build && node scripts/sync-miniapp-static.mjs && npx supabase functions deploy miniapp"
   },
   "nodeModulesDir": true,
   "compilerOptions": {
