--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run build
+      - name: Verify Mini App bundle
+        run: node scripts/assert-miniapp-bundle.mjs
       - name: Deploy Mini App
         run: echo "Deploy Mini App to staging"
 
@@ -80,5 +82,7 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run build
+      - name: Verify Mini App bundle
+        run: node scripts/assert-miniapp-bundle.mjs
       - name: Deploy Mini App
         run: echo "Deploy Mini App to production"
