--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_WEBHOOK_SECRET=
+# Must keep trailing slash
 MINI_APP_URL=
 
 ## Additional Supabase credentials
@@ -25,3 +26,5 @@ AMOUNT_TOLERANCE=
 ## Frontend environment variables
 VITE_SUPABASE_URL=
 VITE_SUPABASE_KEY=
+TELEGRAM_BOT_USERNAME=
+MINI_APP_SHORT_NAME=
