--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,6 +16,12 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - name: Build & bundle miniapp
+        run: |
+          export PROJECT_REF=qeejuomcapbdlhnjqjcc
+          npm run build:miniapp
+          npm run bundle:miniapp
+          npm run assert:miniapp
       - run: deno check supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts
   miniapp-packaging:
     runs-on: ubuntu-latest
@@ -26,4 +32,10 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - name: Build & bundle miniapp
+        run: |
+          export PROJECT_REF=qeejuomcapbdlhnjqjcc
+          npm run build:miniapp
+          npm run bundle:miniapp
+          npm run assert:miniapp
       - run: deno test tests/miniapp-packaging.test.ts
