--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ supabase/.tmp/
 supabase/functions/**/vendor/
 supabase/functions/**/.edge/
 **/*.cas
+.bolt/
 
 # keep telegram-bot vendor in git
 !supabase/functions/telegram-bot/vendor/
