--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -54,6 +54,9 @@ verify_jwt = false
 [functions.tg-verify-init]
 verify_jwt = false
 
+[functions.auth-telegram-init]
+verify_jwt = false
+
 [functions.miniapp]
 verify_jwt = false
 
