--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,7 @@
     "miniapp:build": "deno run -A scripts/build-miniapp.ts",
     "miniapp:dev": "cd supabase/functions/miniapp && npm run dev",
     "miniapp:check": "deno run -A scripts/miniapp-health-check.ts",
-    "miniapp:deploy": "bash scripts/deploy-miniapp.sh"
+    "miniapp:deploy": "bash scripts/build-deploy-miniapp.sh"
   },
   "nodeModulesDir": true,
   "compilerOptions": {
